--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/netvote/elections#readme",
   "dependencies": {
+    "crypto2": "^0.3.2",
+    "protobufjs": "^6.8.3",
     "zeppelin-solidity": "^1.3.0"
   }
 }
