--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "crypto2": "^0.3.2",
     "protobufjs": "^6.8.3",
+    "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "^1.3.0"
   }
 }
