--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto2": "^0.3.2",
     "protobufjs": "^6.8.3",
     "truffle-hdwallet-provider": "0.0.3",
+    "web3-utils": "^1.0.0-beta.26",
     "zeppelin-solidity": "^1.3.0"
   }
 }
