--- a/.soliumrc.json
+++ b/.soliumrc.json
@@ -1,20 +1,9 @@
 {
   "extends": "solium:all",
-  "plugins": [
-    "security"
-  ],
+  "plugins": ["security"],
   "rules": {
-    "quotes": [
-      "error",
-      "double"
-    ],
-    "indentation": [
-      "error",
-      4
-    ],
-    "arg-overflow": [
-      "warning",
-      3
-    ]
+    "quotes": ["error", "double"],
+    "indentation": ["error", 4],
+    "arg-overflow": ["warning", 3]
   }
 }
