--- a/package.json
+++ b/package.json
@@ -7,8 +7,21 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "solium -d contracts/",
+    "compile": "truffle compile",
+    "migrate": "truffle migrate",
+    "networks": "truffle networks",
+    "test-norpc": "truffle test --network testing",
+    "test": "run-with-testrpc -l 20000000 'truffle test --network testing'",
+    "coverage": "solidity-coverage"
   },
+  "keywords": [
+    "Ethereum",
+    "Netvote",
+    "Voting",
+    "Solidity",
+    "Truffle"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/netvote/elections.git"
@@ -22,8 +35,12 @@
   "dependencies": {
     "crypto2": "^0.3.2",
     "protobufjs": "^6.8.3",
+    "run-with-testrpc": "^0.3.0",
     "truffle-hdwallet-provider": "0.0.3",
     "web3-utils": "^1.0.0-beta.26",
     "zeppelin-solidity": "^1.3.0"
+  },
+  "devDependencies": {
+    "solidity-coverage": "^0.4.5"
   }
 }
