--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "crypto2": "^0.3.2",
     "protobufjs": "^6.8.3",
     "run-with-testrpc": "^0.3.0",
+    "truffle-contract": "^3.0.1",
     "truffle-hdwallet-provider": "0.0.3",
     "web3-utils": "^1.0.0-beta.26",
     "zeppelin-solidity": "^1.3.0"
