--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test-norpc": "truffle test --network development",
     "test": "run-with-testrpc -l 20000000 'truffle test --network testing'",
     "test-gas": "run-with-testrpc -l 20000000 'truffle test --network testing ./test-gas/test-gas.js'",
-    "coverage": "solidity-coverage"
+    "coverage": "node_modules/.bin/run-with-testrpc -l 20000000 'node_modules/.bin/solidity-coverage'"
   },
   "keywords": [
     "Ethereum",
