--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "lint": "solium -d contracts/",
+    "lint": "node_modules/.bin/solium -d contracts/",
     "compile": "truffle compile",
     "migrate": "truffle migrate",
     "networks": "truffle networks",
@@ -37,6 +37,7 @@
     "crypto2": "^0.3.2",
     "protobufjs": "^6.8.3",
     "run-with-testrpc": "^0.3.0",
+    "solium": "^1.1.2",
     "truffle-contract": "^3.0.1",
     "truffle-hdwallet-provider": "0.0.3",
     "web3-utils": "^1.0.0-beta.26",
