--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "test": "test"
   },
   "scripts": {
-    "lint": "solium -d contracts/",
+    "lint": "node_modules/.bin/solium -d contracts/",
     "compile": "truffle compile",
     "migrate": "truffle migrate",
     "networks": "truffle networks",
     "test-norpc": "truffle test --network development",
     "test": "run-with-testrpc -l 20000000 'truffle test --network testing'",
     "test-gas": "run-with-testrpc -l 20000000 'truffle test --network testing ./test-gas/test-gas.js'",
-    "coverage": "solidity-coverage"
+    "coverage": "node_modules/.bin/run-with-testrpc -l 20000000 'node_modules/.bin/solidity-coverage'"
   },
   "keywords": [
     "Ethereum",
@@ -37,6 +37,7 @@
     "crypto2": "^0.3.2",
     "protobufjs": "^6.8.3",
     "run-with-testrpc": "^0.3.0",
+    "solium": "^1.1.2",
     "truffle-contract": "^3.0.1",
     "truffle-hdwallet-provider": "0.0.3",
     "web3-utils": "^1.0.0-beta.26",
