--- a/.soliumrc.json
+++ b/.soliumrc.json
@@ -4,6 +4,7 @@
   "rules": {
     "quotes": ["error", "double"],
     "indentation": ["error", 4],
-    "arg-overflow": ["warning", 3]
+    "arg-overflow": ["warning", 3],
+    "security/no-block-members": "off"
   }
 }
