--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "crypto2": "^0.3.2",
     "protobufjs": "^6.8.3",
     "run-with-testrpc": "^0.3.0",
+    "sleep": "^5.1.1",
     "solium": "^1.1.2",
     "truffle-contract": "^3.0.1",
     "truffle-hdwallet-provider": "0.0.3",
