--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "lint": "node_modules/.bin/solium -d contracts/",
-    "compile": "truffle compile",
+    "compile": "run-with-testrpc -l 20000000 'truffle compile --network testing'",
     "migrate": "truffle migrate",
     "networks": "truffle networks",
     "test-norpc": "truffle test --network development",
@@ -47,6 +47,6 @@
   },
   "devDependencies": {
     "solidity-coverage": "^0.4.5",
-    "truffle": "^4.0.1"
+    "truffle": "^4.1.5"
   }
 }
