--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "lint": "node_modules/.bin/solium -d contracts/",
-    "compile": "run-with-testrpc -l 20000000 'truffle compile --network testing'",
+    "compile": "node_modules/.bin/truffle compile",
     "migrate": "truffle migrate",
     "networks": "truffle networks",
     "test-norpc": "truffle test --network development",
