--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
   },
   "scripts": {
     "lint": "node_modules/.bin/solium -d contracts/",
-    "compile": "node_modules/.bin/truffle compile",
+    "compile": "truffle compile",
     "migrate": "truffle migrate",
     "networks": "truffle networks",
     "test-norpc": "truffle test --network development",
     "test": "run-with-testrpc -l 20000000 'truffle test --network testing'",
     "test-gas": "run-with-testrpc -l 20000000 'truffle test --network testing ./test-gas/test-gas.js'",
-    "coverage": "node_modules/.bin/run-with-testrpc -l 20000000 'node_modules/.bin/solidity-coverage'",
-    "prepublish": "npm run compile"
+    "coverage": "node_modules/.bin/run-with-testrpc -l 20000000 'node_modules/.bin/solidity-coverage'"
   },
   "keywords": [
     "Ethereum",
