--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "compile": "truffle compile",
     "migrate": "truffle migrate",
     "networks": "truffle networks",
-    "test-norpc": "truffle test --network development",
-    "test": "run-with-testrpc -l 20000000 'truffle test --network testing'",
-    "test-gas": "run-with-testrpc -l 20000000 'truffle test --network testing ./test-gas/test-gas.js'",
-    "coverage": "node_modules/.bin/run-with-testrpc -l 20000000 'node_modules/.bin/solidity-coverage'"
+    "test": "truffle test --network testing",
+    "test-gas": "truffle test --network testing ./test-gas/test-gas.js",
+    "coverage": "node_modules/.bin/solidity-coverage"
   },
   "keywords": [
     "Ethereum",
@@ -37,6 +36,7 @@
     "crypto2": "^0.3.2",
     "protobufjs": "^6.8.3",
     "run-with-testrpc": "^0.3.0",
+    "ganache-cli": "^6.1.0",
     "sleep": "^5.1.1",
     "solium": "^1.1.2",
     "truffle-contract": "^3.0.1",
@@ -45,7 +45,7 @@
     "zeppelin-solidity": "^1.3.0"
   },
   "devDependencies": {
-    "solidity-coverage": "^0.4.5",
-    "truffle": "^4.1.5"
+    "solidity-coverage": "^0.5.0",
+    "truffle": "^4.1.8"
   }
 }
