--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 before_script:
 - truffle version
 - ganache-cli -p 8545 -l 20000000 > /dev/null &
+- sleep 5
 script:
 - npm run lint
 - travis_retry npm run coverage
