--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "compile": "truffle compile",
     "migrate": "truffle migrate",
     "networks": "truffle networks",
-    "test": "truffle test --network testing",
-    "test-gas": "truffle test --network testing ./test-gas/test-gas.js",
+    "test": "truffle test --network development",
+    "test-gas": "truffle test --network development ./test-gas/test-gas.js",
     "coverage": "node_modules/.bin/solidity-coverage"
   },
   "keywords": [
