--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "compile": "truffle compile",
     "migrate": "truffle migrate",
     "networks": "truffle networks",
-    "test-norpc": "truffle test --network development",
-    "test": "run-with-testrpc -l 20000000 'truffle test --network testing'",
-    "test-gas": "run-with-testrpc -l 20000000 'truffle test --network testing ./test-gas/test-gas.js'",
-    "coverage": "node_modules/.bin/run-with-testrpc -l 20000000 'node_modules/.bin/solidity-coverage'",
-    "prepublish": "npm run compile"
+    "test": "truffle test --network development",
+    "test-gas": "truffle test --network development ./test-gas/test-gas.js",
+    "coverage": "node_modules/.bin/solidity-coverage"
   },
   "keywords": [
     "Ethereum",
@@ -36,17 +34,17 @@
   "homepage": "https://github.com/netvote/elections-solidity#readme",
   "dependencies": {
     "crypto2": "^0.3.2",
+    "ganache-cli": "^6.1.0",
     "protobufjs": "^6.8.3",
-    "run-with-testrpc": "^0.3.0",
     "sleep": "^5.1.1",
     "solium": "^1.1.2",
-    "truffle-contract": "^3.0.1",
-    "truffle-hdwallet-provider": "0.0.3",
-    "web3-utils": "^1.0.0-beta.26",
+    "truffle-contract": "^3.0.5",
+    "truffle-hdwallet-provider": "0.0.5",
+    "web3-utils": "^1.0.0-beta.34",
     "zeppelin-solidity": "^1.3.0"
   },
   "devDependencies": {
-    "solidity-coverage": "^0.4.5",
-    "truffle": "^4.0.1"
+    "solidity-coverage": "^0.5.0",
+    "truffle": "^4.1.11"
   }
 }
