--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netvote/elections-solidity",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "Elections Contracts",
   "main": "truffle-config.js",
   "directories": {
@@ -35,13 +35,13 @@
   "dependencies": {
     "crypto2": "^0.3.2",
     "ganache-cli": "^6.1.0",
+    "openzeppelin-solidity": "1.10.0",
     "protobufjs": "^6.8.3",
     "sleep": "^5.1.1",
-    "solium": "^1.1.2",
+    "solium": "^1.1.7",
     "truffle-contract": "^3.0.5",
     "truffle-hdwallet-provider": "0.0.5",
-    "web3-utils": "^1.0.0-beta.34",
-    "zeppelin-solidity": "^1.3.0"
+    "web3-utils": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "solidity-coverage": "^0.5.0",
