--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netvote/elections-solidity",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "Elections Contracts",
   "main": "truffle-config.js",
   "directories": {
@@ -35,6 +35,7 @@
   "dependencies": {
     "crypto2": "^0.3.2",
     "ganache-cli": "^6.1.0",
+    "npm": "^6.1.0",
     "openzeppelin-solidity": "1.10.0",
     "protobufjs": "^6.8.3",
     "sleep": "^5.1.1",
