--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
 matrix:
   fast_finish: true
 before_install:
-- npm install -g npm
+- npm install -g npm@5.6.0
 before_script:
 - truffle version
 script:
